--- a/trymito.io/styles/PythonAITools.module.css
+++ b/trymito.io/styles/PythonAITools.module.css
@@ -8,6 +8,7 @@
 
 .case_study_text_container {
     max-width: 70%;
+    margin-top: 4rem;
 }
 
   
@@ -21,6 +22,10 @@
     
     .case_study_section {
       flex-direction: row;
+    }
+
+    .case_study_text_container {
+        margin-top: 0;
     }
   
 }
